@@ -1,3 +1,6 @@
+2003-05-28
+  Updated windows.html by Bill Clementson to support emacs version 21.3.
+
 2003-04-15
   Fixed typo in Mark Watson link
   Changed CLiki link in pattern_matching.html
